--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-PREFIX=!
+PREFIX=#
 SESSION=session-shinobu
 MONGO_URI=mongodb://addYourUrl
 MODS=[]
 GOOGLE_API_KEY=addYourKey
+CRON=null
 CHAT_BOT_URL=yourUrl
